--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <h1 id="logo">Local <span> Communities</span></h1>
+    <p>Hello from Github!</p>
+    <button onclick="document.getElementbyId('date').innerHTML = Date()">Click Me</button>
+    <p id="date"></p>
 <nav>
     <ul>
         <li href="#">Home</li>
